# ramces

./: .gitignore  README.md  data_loader.py  mod.py  pyproject.toml  rank_markers.py
LHCC35_small/: channels.csv  ranking.csv
demo/: channels.csv  ranking.csv
demo/output/: X01_Y01_weighted.tif  X01_Y02_weighted.tif  X02_Y01_weighted.tif  X02_Y02_weighted.tif
ramces/: __init__.py  network.py  ramces.py  ramces_cnn.py  utils.py
